finally fix mobile form cut off on home page

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -355,52 +355,18 @@
     }
 }
 
-#contact-983, #contact-983 * {
-  box-sizing: border-box;
-}
-
 @media only screen and (max-width: 37.5rem) {
   #contact-983 {
-    overflow-x: hidden;
-    width: 100%;
-    max-width: 100vw;
-    min-width: 0;
-    
     .cs-container {
-      width: 100%;
       max-width: 100%;
-      min-width: 0;
       padding-left: 0.5rem;
       padding-right: 0.5rem;
-      box-sizing: border-box;
-      overflow-x: hidden;
     }
     
     .cs-form {
-      width: 100%;
-      max-width: 100%;
-      min-width: 0;
-      box-sizing: border-box;
-      overflow-x: hidden;
       display: grid;
       grid-template-columns: 1fr;
       gap: 1rem;
-    }
-    
-    .cs-label, .cs-input, .cs-textarea {
-      width: 100%;
-      max-width: 100%;
-      min-width: 0;
-      box-sizing: border-box;
-      overflow-x: hidden;
-    }
-    
-    .cs-wrapper {
-      width: 100%;
-      max-width: 100%;
-      min-width: 0;
-      box-sizing: border-box;
-      overflow-x: hidden;
     }
   }
 }
